parser.output
State 10 conflicts: 7 shift/reduce


Grammar

    0 $accept: program $end

    1 program: cmdlist

    2 cmdlist: cmds
    3        | cmds cmdlist

    4 cmds: VAR ASSIGN expr SCOL
    5     | IF expr cmdlist END
    6     | ELSEIF expr cmdlist END
    7     | ELSE cmdlist
    8     | WHILE expr cmdlist END
    9     | FOR expr COL expr cmdlist END
   10     | OUT LPAR expr RPAR SCOL
   11     | VAR ASSIGN IN LPAR RPAR SCOL

   12 expr: INT
   13     | VAR
   14     | expr PLUS expr
   15     | expr MINUS expr
   16     | expr TIMES expr
   17     | expr DIV expr
   18     | expr MOD expr
   19     | expr LT expr
   20     | expr GT expr
   21     | expr EQ expr
   22     | expr NOTEQ expr
   23     | expr LTEQ expr
   24     | expr GTEQ expr
   25     | LPAR expr RPAR


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 12
PLUS (259) 14
TIMES (260) 16
DIV (261) 17
VAR (262) 4 11 13
MOD (263) 18
LPAR (264) 10 11 25
RPAR (265) 10 11 25
ASSIGN (266) 4 11
LT (267) 19
GT (268) 20
LTEQ (269) 23
GTEQ (270) 24
EQ (271) 21
NOTEQ (272) 22
WHILE (273) 8
FOR (274) 9
IF (275) 5
ELSE (276) 7
ELSEIF (277) 6
END (278) 5 6 8 9
IN (279) 11
OUT (280) 10
COL (281) 9
SCOL (282) 4 10 11
MINUS (283) 15


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
program (30)
    on left: 1, on right: 0
cmdlist (31)
    on left: 2 3, on right: 1 3 5 6 7 8 9
cmds (32)
    on left: 4 5 6 7 8 9 10 11, on right: 2 3
expr (33)
    on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25, on right: 4
    5 6 8 9 10 14 15 16 17 18 19 20 21 22 23 24 25


State 0

    0 $accept: . program $end

    VAR     shift, and go to state 1
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    IF      shift, and go to state 4
    ELSE    shift, and go to state 5
    ELSEIF  shift, and go to state 6
    OUT     shift, and go to state 7

    program  go to state 8
    cmdlist  go to state 9
    cmds     go to state 10


State 1

    4 cmds: VAR . ASSIGN expr SCOL
   11     | VAR . ASSIGN IN LPAR RPAR SCOL

    ASSIGN  shift, and go to state 11


State 2

    8 cmds: WHILE . expr cmdlist END

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 15


State 3

    9 cmds: FOR . expr COL expr cmdlist END

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 16


State 4

    5 cmds: IF . expr cmdlist END

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 17


State 5

    7 cmds: ELSE . cmdlist

    VAR     shift, and go to state 1
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    IF      shift, and go to state 4
    ELSE    shift, and go to state 5
    ELSEIF  shift, and go to state 6
    OUT     shift, and go to state 7

    cmdlist  go to state 18
    cmds     go to state 10


State 6

    6 cmds: ELSEIF . expr cmdlist END

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 19


State 7

   10 cmds: OUT . LPAR expr RPAR SCOL

    LPAR  shift, and go to state 20


State 8

    0 $accept: program . $end

    $end  shift, and go to state 21


State 9

    1 program: cmdlist .

    $default  reduce using rule 1 (program)


State 10

    2 cmdlist: cmds .
    3        | cmds . cmdlist

    VAR     shift, and go to state 1
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    IF      shift, and go to state 4
    ELSE    shift, and go to state 5
    ELSEIF  shift, and go to state 6
    OUT     shift, and go to state 7

    VAR       [reduce using rule 2 (cmdlist)]
    WHILE     [reduce using rule 2 (cmdlist)]
    FOR       [reduce using rule 2 (cmdlist)]
    IF        [reduce using rule 2 (cmdlist)]
    ELSE      [reduce using rule 2 (cmdlist)]
    ELSEIF    [reduce using rule 2 (cmdlist)]
    OUT       [reduce using rule 2 (cmdlist)]
    $default  reduce using rule 2 (cmdlist)

    cmdlist  go to state 22
    cmds     go to state 10


State 11

    4 cmds: VAR ASSIGN . expr SCOL
   11     | VAR ASSIGN . IN LPAR RPAR SCOL

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14
    IN    shift, and go to state 23

    expr  go to state 24


State 12

   12 expr: INT .

    $default  reduce using rule 12 (expr)


State 13

   13 expr: VAR .

    $default  reduce using rule 13 (expr)


State 14

   25 expr: LPAR . expr RPAR

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 25


State 15

    8 cmds: WHILE expr . cmdlist END
   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   17     | expr . DIV expr
   18     | expr . MOD expr
   19     | expr . LT expr
   20     | expr . GT expr
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr

    PLUS    shift, and go to state 26
    TIMES   shift, and go to state 27
    DIV     shift, and go to state 28
    VAR     shift, and go to state 1
    MOD     shift, and go to state 29
    LT      shift, and go to state 30
    GT      shift, and go to state 31
    LTEQ    shift, and go to state 32
    GTEQ    shift, and go to state 33
    EQ      shift, and go to state 34
    NOTEQ   shift, and go to state 35
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    IF      shift, and go to state 4
    ELSE    shift, and go to state 5
    ELSEIF  shift, and go to state 6
    OUT     shift, and go to state 7
    MINUS   shift, and go to state 36

    cmdlist  go to state 37
    cmds     go to state 10


State 16

    9 cmds: FOR expr . COL expr cmdlist END
   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   17     | expr . DIV expr
   18     | expr . MOD expr
   19     | expr . LT expr
   20     | expr . GT expr
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr

    PLUS   shift, and go to state 26
    TIMES  shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29
    LT     shift, and go to state 30
    GT     shift, and go to state 31
    LTEQ   shift, and go to state 32
    GTEQ   shift, and go to state 33
    EQ     shift, and go to state 34
    NOTEQ  shift, and go to state 35
    COL    shift, and go to state 38
    MINUS  shift, and go to state 36


State 17

    5 cmds: IF expr . cmdlist END
   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   17     | expr . DIV expr
   18     | expr . MOD expr
   19     | expr . LT expr
   20     | expr . GT expr
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr

    PLUS    shift, and go to state 26
    TIMES   shift, and go to state 27
    DIV     shift, and go to state 28
    VAR     shift, and go to state 1
    MOD     shift, and go to state 29
    LT      shift, and go to state 30
    GT      shift, and go to state 31
    LTEQ    shift, and go to state 32
    GTEQ    shift, and go to state 33
    EQ      shift, and go to state 34
    NOTEQ   shift, and go to state 35
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    IF      shift, and go to state 4
    ELSE    shift, and go to state 5
    ELSEIF  shift, and go to state 6
    OUT     shift, and go to state 7
    MINUS   shift, and go to state 36

    cmdlist  go to state 39
    cmds     go to state 10


State 18

    7 cmds: ELSE cmdlist .

    $default  reduce using rule 7 (cmds)


State 19

    6 cmds: ELSEIF expr . cmdlist END
   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   17     | expr . DIV expr
   18     | expr . MOD expr
   19     | expr . LT expr
   20     | expr . GT expr
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr

    PLUS    shift, and go to state 26
    TIMES   shift, and go to state 27
    DIV     shift, and go to state 28
    VAR     shift, and go to state 1
    MOD     shift, and go to state 29
    LT      shift, and go to state 30
    GT      shift, and go to state 31
    LTEQ    shift, and go to state 32
    GTEQ    shift, and go to state 33
    EQ      shift, and go to state 34
    NOTEQ   shift, and go to state 35
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    IF      shift, and go to state 4
    ELSE    shift, and go to state 5
    ELSEIF  shift, and go to state 6
    OUT     shift, and go to state 7
    MINUS   shift, and go to state 36

    cmdlist  go to state 40
    cmds     go to state 10


State 20

   10 cmds: OUT LPAR . expr RPAR SCOL

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 41


State 21

    0 $accept: program $end .

    $default  accept


State 22

    3 cmdlist: cmds cmdlist .

    $default  reduce using rule 3 (cmdlist)


State 23

   11 cmds: VAR ASSIGN IN . LPAR RPAR SCOL

    LPAR  shift, and go to state 42


State 24

    4 cmds: VAR ASSIGN expr . SCOL
   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   17     | expr . DIV expr
   18     | expr . MOD expr
   19     | expr . LT expr
   20     | expr . GT expr
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr

    PLUS   shift, and go to state 26
    TIMES  shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29
    LT     shift, and go to state 30
    GT     shift, and go to state 31
    LTEQ   shift, and go to state 32
    GTEQ   shift, and go to state 33
    EQ     shift, and go to state 34
    NOTEQ  shift, and go to state 35
    SCOL   shift, and go to state 43
    MINUS  shift, and go to state 36


State 25

   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   17     | expr . DIV expr
   18     | expr . MOD expr
   19     | expr . LT expr
   20     | expr . GT expr
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr
   25     | LPAR expr . RPAR

    PLUS   shift, and go to state 26
    TIMES  shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29
    RPAR   shift, and go to state 44
    LT     shift, and go to state 30
    GT     shift, and go to state 31
    LTEQ   shift, and go to state 32
    GTEQ   shift, and go to state 33
    EQ     shift, and go to state 34
    NOTEQ  shift, and go to state 35
    MINUS  shift, and go to state 36


State 26

   14 expr: expr PLUS . expr

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 45


State 27

   16 expr: expr TIMES . expr

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 46


State 28

   17 expr: expr DIV . expr

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 47


State 29

   18 expr: expr MOD . expr

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 48


State 30

   19 expr: expr LT . expr

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 49


State 31

   20 expr: expr GT . expr

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 50


State 32

   23 expr: expr LTEQ . expr

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 51


State 33

   24 expr: expr GTEQ . expr

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 52


State 34

   21 expr: expr EQ . expr

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 53


State 35

   22 expr: expr NOTEQ . expr

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 54


State 36

   15 expr: expr MINUS . expr

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 55


State 37

    8 cmds: WHILE expr cmdlist . END

    END  shift, and go to state 56


State 38

    9 cmds: FOR expr COL . expr cmdlist END

    INT   shift, and go to state 12
    VAR   shift, and go to state 13
    LPAR  shift, and go to state 14

    expr  go to state 57


State 39

    5 cmds: IF expr cmdlist . END

    END  shift, and go to state 58


State 40

    6 cmds: ELSEIF expr cmdlist . END

    END  shift, and go to state 59


State 41

   10 cmds: OUT LPAR expr . RPAR SCOL
   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   17     | expr . DIV expr
   18     | expr . MOD expr
   19     | expr . LT expr
   20     | expr . GT expr
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr

    PLUS   shift, and go to state 26
    TIMES  shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29
    RPAR   shift, and go to state 60
    LT     shift, and go to state 30
    GT     shift, and go to state 31
    LTEQ   shift, and go to state 32
    GTEQ   shift, and go to state 33
    EQ     shift, and go to state 34
    NOTEQ  shift, and go to state 35
    MINUS  shift, and go to state 36


State 42

   11 cmds: VAR ASSIGN IN LPAR . RPAR SCOL

    RPAR  shift, and go to state 61


State 43

    4 cmds: VAR ASSIGN expr SCOL .

    $default  reduce using rule 4 (cmds)


State 44

   25 expr: LPAR expr RPAR .

    $default  reduce using rule 25 (expr)


State 45

   14 expr: expr . PLUS expr
   14     | expr PLUS expr .
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   17     | expr . DIV expr
   18     | expr . MOD expr
   19     | expr . LT expr
   20     | expr . GT expr
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr

    TIMES  shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29

    $default  reduce using rule 14 (expr)


State 46

   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   16     | expr TIMES expr .
   17     | expr . DIV expr
   18     | expr . MOD expr
   19     | expr . LT expr
   20     | expr . GT expr
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr

    $default  reduce using rule 16 (expr)


State 47

   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   17     | expr . DIV expr
   17     | expr DIV expr .
   18     | expr . MOD expr
   19     | expr . LT expr
   20     | expr . GT expr
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr

    $default  reduce using rule 17 (expr)


State 48

   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   17     | expr . DIV expr
   18     | expr . MOD expr
   18     | expr MOD expr .
   19     | expr . LT expr
   20     | expr . GT expr
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr

    $default  reduce using rule 18 (expr)


State 49

   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   17     | expr . DIV expr
   18     | expr . MOD expr
   19     | expr . LT expr
   19     | expr LT expr .
   20     | expr . GT expr
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr

    PLUS   shift, and go to state 26
    TIMES  shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29
    MINUS  shift, and go to state 36

    $default  reduce using rule 19 (expr)


State 50

   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   17     | expr . DIV expr
   18     | expr . MOD expr
   19     | expr . LT expr
   20     | expr . GT expr
   20     | expr GT expr .
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr

    PLUS   shift, and go to state 26
    TIMES  shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29
    MINUS  shift, and go to state 36

    $default  reduce using rule 20 (expr)


State 51

   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   17     | expr . DIV expr
   18     | expr . MOD expr
   19     | expr . LT expr
   20     | expr . GT expr
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   23     | expr LTEQ expr .
   24     | expr . GTEQ expr

    PLUS   shift, and go to state 26
    TIMES  shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29
    MINUS  shift, and go to state 36

    $default  reduce using rule 23 (expr)


State 52

   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   17     | expr . DIV expr
   18     | expr . MOD expr
   19     | expr . LT expr
   20     | expr . GT expr
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr
   24     | expr GTEQ expr .

    PLUS   shift, and go to state 26
    TIMES  shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29
    MINUS  shift, and go to state 36

    $default  reduce using rule 24 (expr)


State 53

   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   17     | expr . DIV expr
   18     | expr . MOD expr
   19     | expr . LT expr
   20     | expr . GT expr
   21     | expr . EQ expr
   21     | expr EQ expr .
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr

    PLUS   shift, and go to state 26
    TIMES  shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29
    LT     shift, and go to state 30
    GT     shift, and go to state 31
    LTEQ   shift, and go to state 32
    GTEQ   shift, and go to state 33
    MINUS  shift, and go to state 36

    $default  reduce using rule 21 (expr)


State 54

   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   17     | expr . DIV expr
   18     | expr . MOD expr
   19     | expr . LT expr
   20     | expr . GT expr
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   22     | expr NOTEQ expr .
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr

    PLUS   shift, and go to state 26
    TIMES  shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29
    LT     shift, and go to state 30
    GT     shift, and go to state 31
    LTEQ   shift, and go to state 32
    GTEQ   shift, and go to state 33
    MINUS  shift, and go to state 36

    $default  reduce using rule 22 (expr)


State 55

   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   15     | expr MINUS expr .
   16     | expr . TIMES expr
   17     | expr . DIV expr
   18     | expr . MOD expr
   19     | expr . LT expr
   20     | expr . GT expr
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr

    TIMES  shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29

    $default  reduce using rule 15 (expr)


State 56

    8 cmds: WHILE expr cmdlist END .

    $default  reduce using rule 8 (cmds)


State 57

    9 cmds: FOR expr COL expr . cmdlist END
   14 expr: expr . PLUS expr
   15     | expr . MINUS expr
   16     | expr . TIMES expr
   17     | expr . DIV expr
   18     | expr . MOD expr
   19     | expr . LT expr
   20     | expr . GT expr
   21     | expr . EQ expr
   22     | expr . NOTEQ expr
   23     | expr . LTEQ expr
   24     | expr . GTEQ expr

    PLUS    shift, and go to state 26
    TIMES   shift, and go to state 27
    DIV     shift, and go to state 28
    VAR     shift, and go to state 1
    MOD     shift, and go to state 29
    LT      shift, and go to state 30
    GT      shift, and go to state 31
    LTEQ    shift, and go to state 32
    GTEQ    shift, and go to state 33
    EQ      shift, and go to state 34
    NOTEQ   shift, and go to state 35
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    IF      shift, and go to state 4
    ELSE    shift, and go to state 5
    ELSEIF  shift, and go to state 6
    OUT     shift, and go to state 7
    MINUS   shift, and go to state 36

    cmdlist  go to state 62
    cmds     go to state 10


State 58

    5 cmds: IF expr cmdlist END .

    $default  reduce using rule 5 (cmds)


State 59

    6 cmds: ELSEIF expr cmdlist END .

    $default  reduce using rule 6 (cmds)


State 60

   10 cmds: OUT LPAR expr RPAR . SCOL

    SCOL  shift, and go to state 63


State 61

   11 cmds: VAR ASSIGN IN LPAR RPAR . SCOL

    SCOL  shift, and go to state 64


State 62

    9 cmds: FOR expr COL expr cmdlist . END

    END  shift, and go to state 65


State 63

   10 cmds: OUT LPAR expr RPAR SCOL .

    $default  reduce using rule 10 (cmds)


State 64

   11 cmds: VAR ASSIGN IN LPAR RPAR SCOL .

    $default  reduce using rule 11 (cmds)


State 65

    9 cmds: FOR expr COL expr cmdlist END .

    $default  reduce using rule 9 (cmds)
